# qiime_2_ll_quick_viewer

./: .gitignore  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  PYPI.md  README.md  README.rst  requirements_dev.txt  setup.cfg  setup.py  tox.ini  travis_pypi_setup.py
.github/: ISSUE_TEMPLATE.md
docs/: .gitignore  Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
qiime_2_ll_quick_viewer/: __init__.py  cli.py  qiime_2_ll_quick_viewer.py
tests/: __init__.py  test_qiime_2_ll_quick_viewer.py
